✨ change layout of header and left sidebar menu